--- a/themes/raditian-free-hugo-theme-data-science/layouts/partials/client-and-work.html
+++ b/themes/raditian-free-hugo-theme-data-science/layouts/partials/client-and-work.html
@@ -10,7 +10,7 @@
         <div class="clients">
           {{ range .Site.Data.homepage.client_and_work.clients }}
           <div class="clients__item">
-            <a href="https://www.business-science.io/">
+            <a href="https://dataist.netlify.app/">
               <img
                 class="lozad img-responsive"
                 src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
